--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: java
 sudo: false
-script: bundle exec mvn clean package
+install: mvn clean package -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+script: mvn clean package
 jdk:
   - oraclejdk8
