--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ install: mvn clean package -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script: mvn clean package
 jdk:
   - oraclejdk8
+  - oraclejdk7
+  - openjdk7
